# ModernBERTQueryClassifier

./: README.md  pyproject.toml
data/: dataset.xlsx  questions_sample_2k.xlsx  rev_guardrail_r1.xlsx
data_process/: 1_dataset_generation.py  2_dataset_review.py
inference/: 4_inference.py
model_train/: 3_modern_bert_finetune.py
